<?xml version="1.0" encoding="utf-8"?>

<!--

 Copyright 2016 Rubén Montero Vázquez

 This file is part of Smart Party.

 Smart Party is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 Smart Party is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with Smart Party.  If not, see <http://www.gnu.org/licenses/>.

-->


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_list_manager"
    tools:context="es.udc.fic.tfg.smartparty.activity.ListManagerActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_no_lists_yet"
        android:text="@string/you_dont_have_lists"
        android:layout_centerHorizontal="true"
        android:padding="8dp"/>

    <!-- This will content the card views generated programmatically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_lists"
        android:layout_below="@id/text_no_lists_yet"
        android:orientation="vertical">
    </LinearLayout>

    <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="8dp"
       android:layout_below="@id/layout_lists"
       app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_list_everyone"
            android:padding="10dp"
            android:text="@string/everyone_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_list_everyone"
            android:layout_alignTop="@id/text_list_everyone"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="onClickChangeListCheckBox"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/divider_everyone"
            android:background="?android:attr/dividerHorizontal"
            android:layout_below="@id/text_list_everyone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_everyone"
            android:padding="8dp"
            android:textStyle="italic"
            android:text="@string/special_list"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

</RelativeLayout>
</ScrollView>